# grouping-proof

./: LICENSE  README.md  cidbasedjavacardquery  proof.sql  testmultiple.c
GroupingProof/: Card.BAS  Card.def  Card.zcc  Project.zcp  Term.bas  Term.zct  card.DBG  term.DBG
GroupingProofAdmin/: inventory.c  nfc.c  nfc.h
GroupingProofHost/src/: Host.java  VerifierTriplet.java
libfreefare/: CMakeLists.txt  aclocal.m4  libtool
libfreefare-0.3.1/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  libtool
libfreefare-0.3.1/contrib/: Makefile.in
libfreefare-0.3.1/examples/: Makefile.am  Makefile.in  mifare-desfire-ev1-configure-random-uid.c
libfreefare-0.3.1/libfreefare/: Makefile.am  Makefile.in  freefare.c  freefare.h  mifare_desfire.3  mifare_desfire.c  mifare_desfire_crypto.c  (+1 more)
libfreefare-0.3.1/test/common/: Makefile.am  Makefile.in
libfreefare/examples/: CMakeLists.txt  Makefile.am  Makefile.in  mifare-desfire-access.c  mifare-desfire-info.c  mifare-ultralightc-access.c  mifare-ultralightc-access.c~
libfreefare/examples/.deps/: mifare-desfire-access.Po  mifare-desfire-ev1-configure-default-key.Po  mifare-desfire-info.Po  mifare-ultralightc-access.Po
libfreefare/examples/.svn/: all-wcprops  dir-prop-base  entries
libfreefareold/: Makefile.am  Makefile.in  config.h  config.h.in~  configure  libfreefare.pc  libtool
libfreefareold/test/common/: Makefile.am  Makefile.in  mifare_desfire_auto_authenticate.c
libfreefareold/test/common/.svn/: entries
libnfc-1.5.0/: Doxyfile  Makefile.in  config.h  config.h.in  configure  libnfc.pc  libtool
nfc-tools-read-only/: Makefile.in  config.h  config.h.in  configure  libtool
projwebsite/: index.php  order.php
(+289 files in other folders)
